# Incoherence-paper

./: .gitignore  README.md  pyproject.toml
src/incoherence/: __init__.py  distributions.py  experiments.py  mdp.py  metrics.py  policy.py  scenarios.py  training.py  utils.py
tests/: conftest.py  test_experiments.py
