[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incoherence"
version = "0.1.0"
description = "Repository for the paper 'Incoherence in goal-conditioned autoregressive models'"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "slow:marks tests that run the full experiment regressions",
]
